--- a/MyTime/Views/AttendanceCardReport/Index.cshtml
+++ b/MyTime/Views/AttendanceCardReport/Index.cshtml
@@ -277,7 +277,7 @@
                      
                 ],
                     columnDefs: [                          
-                    { targets: 0, className: 'text-center', width: '40px', orderable: true},
+                    { targets: 0, className: 'text-center', width: '40px', orderable: true, visible: false},
                     { targets: 1, className: 'text-left', width: '350px', orderable: true, visible: false  },
                     { targets: 2, className: 'text-left', width: '250px', orderable: true },
                     { targets: 3, className: 'text-center', width: '150px', orderable: true },
