--- a/MyTime/Views/AttendanceCardReport/Index.cshtml
+++ b/MyTime/Views/AttendanceCardReport/Index.cshtml
@@ -287,9 +287,9 @@
                     { targets: 7, className: 'text-center', width: '80px', orderable: true },
                     { targets: 8, className: 'text-center', width: '80px', orderable: true },
                     { targets: 9, className: 'text-center', width: '80px', orderable: true },
-                    { targets: 10, className: 'text-center', width: '80px', orderable: true, visible: false  },
+                    { targets: 10, className: 'text-center', width: '80px', orderable: true  },
                     { targets: 11, className: 'text-center', width: '80px', orderable: true, visible: false },
-                    { targets: 12, className: 'text-center', width: '80px', orderable: true }              
+                    { targets: 12, className: 'text-center', width: '80px', orderable: true, visible: false }              
                    
                 ],
                 order: [[1, 'asc'], [2, 'asc']]
