--- a/MyTime/Views/AttendanceCardReport/Index.cshtml
+++ b/MyTime/Views/AttendanceCardReport/Index.cshtml
@@ -288,7 +288,7 @@
                     { targets: 8, className: 'text-center', width: '80px', orderable: true },
                     { targets: 9, className: 'text-center', width: '80px', orderable: true },
                     { targets: 10, className: 'text-center', width: '80px', orderable: true  },
-                    { targets: 11, className: 'text-center', width: '80px', orderable: true, visible: false },
+                    { targets: 11, className: 'text-center', width: '80px', orderable: true},
                     { targets: 12, className: 'text-center', width: '80px', orderable: true, visible: false }              
                    
                 ],
