--- a/MyTime/Views/AttendanceCardStatusYearlyReport/Index.cshtml
+++ b/MyTime/Views/AttendanceCardStatusYearlyReport/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model MyTime.ViewModels.AttendanceCardSummaryReportViewModel
+﻿@model MyTime.ViewModels.AttendanceCardStatusYearlyReportViewModel
 
 @{
-    ViewBag.Title = MyTime.Resource.AttendanceCardReport;
+    ViewBag.Title = MyTime.Resource.AttendanceCardStatusYearlyReport;
 
     Layout = "~/Views/Shared/_Layout.cshtml";
 
@@ -30,7 +30,7 @@
 
                         <div class="form-group row text-center">
                             <div class="col-md-12">
-                                <h6>@MyTime.Resource.AttendanceCardSummaryReport</h6>
+                                <h6>@MyTime.Resource.AttendanceCardStatusYearlyReport</h6>
                             </div>
                         </div>
 
@@ -61,7 +61,7 @@
                                         <span class="pl-1"></span>
                                         <input id="btnReset" type="button" value="@MyTime.Resource.Reset" class="btn btn-warning text-center" style="min-width: 80px;" />
                                         <span class="pl-1"></span>
-                                        <input id="btnPrint" type="button" value="@MyTime.Resource.Print" class="btn btn-info text-black text-center" style="min-width: 80px;" onclick="location.href='@Url.Action("PrintAttendanceCardSummaryReport", "AttendanceCardSummaryReport" )'" />
+                                        <input id="btnPrint" type="button" value="@MyTime.Resource.Print" class="btn btn-info text-black text-center" style="min-width: 80px;" onclick="location.href='@Url.Action("PrintAttendanceCardStatusYearlyReport", "AttendanceCardStatusYearlyReport" )'" />
                                     </div>
                                 </div>
 
@@ -543,7 +543,7 @@
         $.ajax({
             datatype: 'text/plain',
             type: 'POST',
-            url: 'AttendanceCardSummaryReport/GenerateAttendanceCardList',
+            url: 'AttendanceCardStatusYearlyReport/GenerateAttendanceCardList',
             data: { selectedYear: selectedYear, selectedDepartmentID: selectedDepartmentID, selectedAttendanceCardStatus: selectedAttendanceCardStatus },
             cache: false,
             success: function (data) {
